@@ -30,7 +30,7 @@ public class MultiobjectiveHillClimbingDistance extends Generator{
 	protected List<Float> listTrace = new ArrayList<Float>();
 	private List<State> visitedState = new ArrayList<State>();
 	public static int sizeNeighbors;
-	//Lista que contiene las distancias de cada solución del frente de Pareto estimado
+	//Lista que contiene las distancias de cada soluciï¿½n del frente de Pareto estimado
 	public static List<Double> distanceSolution = new ArrayList<Double>();
 
 
@@ -56,10 +56,10 @@ public class MultiobjectiveHillClimbingDistance extends Generator{
 	@Override
 	public void updateReference(State stateCandidate, Integer countIterationsCurrent) throws IllegalArgumentException, SecurityException, ClassNotFoundException, 
 	InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
-		//Agregando la primera solución a la lista de soluciones no dominadas
+		//Agregando la primera soluciï¿½n a la lista de soluciones no dominadas
 		if(Strategy.getStrategy().listRefPoblacFinal.size() == 0){
 			Strategy.getStrategy().listRefPoblacFinal.add(stateReferenceHC.clone());
-			distanceSolution.add(new Double(0));
+			distanceSolution.add(Double.valueOf(0.0));
 		}
 		ifacceptCandidate = new FactoryAcceptCandidate();
 		AcceptableCandidate candidate = ifacceptCandidate.createAcceptCandidate(typeAcceptation);
@@ -183,7 +183,7 @@ public class MultiobjectiveHillClimbingDistance extends Generator{
 //			distanceSolution.set(k, distanceSolution.get(k) + distance);
 		}
 		distance = 0.0;
-		//Calculando la distancia del último elemento (elemento insertado) respecto al resto de los elementos
+		//Calculando la distancia del ï¿½ltimo elemento (elemento insertado) respecto al resto de los elementos
 		if (solutions.length==1) {
 			return distanceSolution;
 		
